feat: create glog simulation.log parser CLI